<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    <TextView
        android:id="@+id/txt_max_shortcut_count_per_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size"/>
    <Button
        android:id="@+id/btn_dynamic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dynamic_shortcuts_btn_lable" />
    <Button
        android:id="@+id/btn_dynamic_add_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lable_btn_add_one" />
    <Button
        android:id="@+id/btn_dynamic_remove_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lable_btn_remove_one" />
    <Button
        android:id="@+id/btn_dynamic_disable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lable_btn_disable_like" />
    <Button
        android:id="@+id/btn_dynamic_enable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lable_btn_enable_like" />
</LinearLayout>
